--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -35,7 +35,7 @@
     <h3>Tags</h3>
     <ul>
         {% for tag in tags %}
-            <li>{{ tag.content }}</li>
+            <li>{{ tag }}</li>
         {% endfor %}
     </ul>
 {% endblock page_content %}
