--- a/templates/notes/latest.html
+++ b/templates/notes/latest.html
@@ -1,19 +1,20 @@
 {% extends "layout/default.html" %}
 
 {% block page_title %}
-    <h2>View note</h2>
+    <h2>Latest notes</h2>
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">View note</li>
+            <li class="breadcrumb-item active" aria-current="page">Latest notes</li>
         </ol>
     </nav>
 {% endblock page_title %}
 
 {% block page_content %}
 
-    {% include "notes/form.html" with form_action="update" %}
+    <h3 class="mb-3">Latest notes</h3>
+
+    {% include "notes/grid.html" %}
 
 {% endblock page_content %}
-
