--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -22,6 +22,8 @@
 
         <button type="submit">Login</button>
 
+        <a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
+
     </form>
 
 
