--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -17,7 +17,7 @@
 
         <div class="form-group mb-3">
             <label for="title">Password</label>
-            <input type="text" class="form-control" id="password" name="password">
+            <input type="password" class="form-control" id="password" name="password">
         </div>
 
         <button type="submit">Login</button>
