--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -9,6 +9,6 @@
 
 <p>{% translate "Your password has been set.  You may go ahead and log in now." %}</p>
 
-<p><a href="{{ login_url }}">{% translate 'Log in' %}</a></p>
+<p><a href="/auth/login/">{% translate 'Log in' %}</a></p>
 
 {% endblock %}
