--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -11,27 +11,24 @@
 
 <p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
 
-<form method="post">{% csrf_token %}
-  <fieldset class="module aligned">
-    <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}">
-    <div class="form-row field-password1">
-      {{ form.new_password1.errors }}
-      <div class="flex-container">
+<form method="post">
+    {% csrf_token %}
+
+    <input type="hidden" autocomplete="username" value="{{ form.user.get_username }}">
+
+    <div class="form-group mb-3">
         <label for="id_new_password1">{% translate 'New password:' %}</label>
         {{ form.new_password1 }}
-      </div>
+        {{ form.new_password1.errors }}
     </div>
-    <div class="form-row field-password2">
-      {{ form.new_password2.errors }}
-      <div class="flex-container">
-        <label for="id_new_password2">{% translate 'Confirm password:' %}</label>
+
+    <div class="form-group mb-3">
+        <label for="id_new_password1">{% translate 'Confirm password:' %}</label>
         {{ form.new_password2 }}
-      </div>
+        {{ form.new_password2.errors }}
     </div>
-  </fieldset>
-  <div class="submit-row">
+
     <input type="submit" value="{% translate 'Change my password' %}">
-  </div>
 </form>
 
 {% else %}
